@startuml

title Architecture v2 - REST API Layer

class WorkerController
class WorkerService
interface WorkerRepository

class Worker {
  id : Long
  name : String
  phone : String
  shift : String
  active : boolean
}

Client --> WorkerController
WorkerController --> WorkerService
WorkerService --> WorkerRepository
WorkerRepository --> Worker

@enduml